Demo: Export Packages from the Command Line Closes #20